Revert "Remove fixed footer to unscrew layout on mobile"
This reverts commit 8e549aebb120cc49c310d059fab4f88f8fba26e5.

--- a/svelte/css/main-layout.scss
+++ b/svelte/css/main-layout.scss
@@ -11,10 +11,11 @@ body {
   max-height: calc(var(--adjusted-vh, 1vh) * 100);
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto 1fr auto;
   grid-template-areas: 
     'header'
-    'main';
+    'main'
+    'footer';
 
   > header {
     grid-area: header;
@@ -25,7 +26,8 @@ body {
     overflow: auto;
 
     display: grid;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: 1fr;
+
     grid-template-columns: 1fr minmax(0, 1200px) 1fr;
 
     > section {
@@ -41,10 +43,9 @@ body {
       background-color: var(--content-background);
       padding: var(--main-spacing);
     }
-
-    > footer {
-      grid-area: 2 / 1 / 2 / 4;
-    }
   }
 
+  > footer {
+    grid-area: footer;
+  }
 }
